<resources>
    <string name="app_name">IMC</string>

    <string name="title_imc">Calculadora de IMC</string>

    <string name="hint_weight">Peso</string>
    <string name="hint_age">Idade</string>

    <string name="label_height">Altura (cm)</string>
    <string name="label_0_cm">0 cm</string>
    <string name="label_result">RESULTADO</string>

    <string name="button_clear">Limpar</string>
    <string name="button_calculate">Calcular</string>

    <string name="msg_invalid_weight">Digite um peso válido.</string>
    <string name="msg_invalid_height">Selecione uma altura válida.</string>
    <string name="msg_invalid_age">Digite uma idade válida.</string>
</resources>